# tezos-project

./: .gitignore  README.md  on_off_chain_assertion.sol  parser.mly  rpc-example.ml  rpctest.ml  rpctransfer3.ml
assertions/src/offline/: assert_to_json.ml  check_and_compile.mli  dune  generate_assertion_contract.ml  generate_assertion_contract.mli  main.ml  test.ml  transform_and_compile.mli
assertions/src/offline/cli/: cli_args.ml  cli_args.mli  dune
assertions/src/offline/dao/: dao_type.ml  dao_type.mli  dune
assertions/src/offline/parser/: assertion.ml  assertion.mli  dune  lex_and_parse.ml  lex_and_parse.mli  lexer.mll  parser.mly  pp_ast.ml  pp_ast.mli  pp_parser_tokens.ml
assertions/src/offline/tezos/: check_and_compile.ml  dune  pp_tezos_ast.ml  pp_tezos_ast.mli  tezos_ast.ml  tezos_ast.mli  transform_and_compile.ml
assertions/src/offline/tezos/ast/: ast.ml  ast.mli  dune  pp_ast.ml  pp_ast.mli  tezos_ast.ml  tezos_ast.mli
assertions/src/offline/tezos/compiler/: compile.ml  compile_header.ml  compile_header.mli  dune  sanity_check.ml
assertions/src/offline/tezos/dao/: dao_script.ml  dao_script.mli  dao_script_chain.ml  dao_script_chain.mli  dao_script_file.ml  dao_script_file.mli  dao_script_string.ml  dao_script_string.mli  dune
assertions/src/offline/tezos/transformation/: dune  pp_tezos_ast.ml  transformation.ml  transformation.mli
assertions/src/offline/tezos/typecheck/: SyncAPIV0_context.ml  SyncAPIV0_context.mli  dune  entrypoint_mapping.ml  entrypoint_mapping.mli  micheline_annotations.ml  micheline_annotations.mli  type_checker.ml  type_checker.mli  union_path.ml  union_path.mli
assertions/src/offline/transformation/: transformation.ml  transformation.mli
assertions/src/offline/transformation/tezos/: dune  tezos_ast.ml  tezos_ast.mli  transformation.ml
assertions/test/offline/tezos/typecheck/alcotest/: contract_generator.ml  contract_generator.mli  dune  helpers.ml  helpers.mli  test_helpers.ml  test_helpers.mli  test_match_contract.ml  test_micheline_annotations.ml  test_mismatch_contract.ml  test_typecheck_types.ml  test_union_path.ml  typecheck_wrapper.ml  typecheck_wrapper.mli
papers/contract-modules/code/front-end/src/parser/: contract_module.atd  contract_module.ml  contract_module.mli  dune  lex_and_parse.ml  lex_and_parse.mli  lexer.mll  parser.mly  pp_ast.ml  pp_ast.mli  pp_parser_tokens.ml
projects/ocaml_michelson-interpreter/: README.md  bachelor_arbeit.md  bachelor_projekt.md  build_exec.sh  dune  dune-project  michelson.opam
projects/ocaml_michelson-interpreter/src/bncf/: create_test.sh  create_test_haskell.sh  michelson.cf  michelson.cf.bak  test_contract.tz  test_folder.sh  test_haskell_parser.sh  test_parser.sh  test_test.sh  test_test_haskell.sh
projects/ocaml_michelson-interpreter/src/bncf/haskell_backend/: Makefile
projects/ocaml_michelson-interpreter/src/bncf/haskell_backend/Michelson/: Abs.hi  Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  ErrM.hs  Lex.hi  Lex.hs  Lex.x  Lex.x.bak  Par.hi  Par.hs  Par.info  Par.y  Par.y.bak  Print.hi  Print.hs  Print.hs.bak  Skel.hi  Skel.hs  Skel.hs.bak  Test  Test.hi  Test.hs
projects/ocaml_michelson-interpreter/src/bncf/ocaml_backend/: AbsMichelson.ml.bak  LexMichelson.mll.bak  Makefile  ParMichelson.mli  ParMichelson.mly.bak  PrintMichelson.ml.bak  ShowMichelson.ml  ShowMichelson.ml.bak  SkelMichelson.ml.bak  TestMichelson
projects/ocaml_michelson-interpreter/src/bncf/test/: AbsTest.ml  AbsTest.ml.bak  LexTest.ml  LexTest.mll  LexTest.mll.bak  Makefile  ParTest.ml  ParTest.mli  ParTest.mly  ParTest.mly.bak  PrintTest.ml  PrintTest.ml.bak  ShowTest.ml  ShowTest.ml.bak  SkelTest.ml  SkelTest.ml.bak  TestTest  TestTest.ml
projects/ocaml_michelson-interpreter/src/bncf/test_haskell/: Makefile
projects/ocaml_michelson-interpreter/src/bncf/test_haskell/Test/: Abs.hi  Abs.hs  Abs.hs.bak  Doc.txt  Doc.txt.bak  ErrM.hs  Lex.hi  Lex.hs  Lex.x  Lex.x.bak  Par.hi  Par.hs  Par.info  Par.y  Par.y.bak  Print.hi  Print.hs  Print.hs.bak  Skel.hi  Skel.hs  Skel.hs.bak  Test  Test.hi  Test.hs
projects/ocaml_michelson-interpreter/src/bnfc/: BNFC_BNF-Converter_ github.com.link.html  README.md  create_haskell_parser.sh  create_parser.sh  latex_language-specification.sh  macro_expansion.tz  michelson-grammar.txt  michelson.cf  test.cf  test_contract.tz  test_macros.sh  test_test-contract.sh  test_test-files.sh
projects/ocaml_michelson-interpreter/src/bnfc/language-specification/: michelson.tex
projects/ocaml_michelson-interpreter/src/bnfc/ocaml_backend/: AbsMichelson.ml  AbsMichelson.ml.bak  LexMichelson.ml  LexMichelson.mll  LexMichelson.mll.bak  Makefile  ParMichelson.ml  ParMichelson.mli  ParMichelson.mly  ParMichelson.mly.bak  PrintMichelson.ml  PrintMichelson.ml.bak  ShowMichelson.ml  ShowMichelson.ml.bak  SkelMichelson.ml  SkelMichelson.ml.bak  TestMichelson  TestMichelson.ml
projects/ocaml_michelson-interpreter/src/lib/: README.md  config.ml  configuration.ml  dune  error.ml  exec.sh  interpreter.ml  lib.ml  michelson.ml  mutez.ml  parse.ml  print.ml  value.ml
projects/ocaml_michelson-interpreter/src/lib/parser/: AbsMichelson.ml  LexMichelson.ml  LexMichelson.mll  ParMichelson.ml  ParMichelson.mli  ParMichelson.mly  PrintMichelson.ml  ShowMichelson.ml  SkelMichelson.ml  TestMichelson  TestMichelson.ml  dune
projects/ocaml_michelson-interpreter/src/lib/utils/: eval_utils.ml  map.ml  mutez.ml  mutez.mli  tstamp.ml
projects/ocaml_michelson-interpreter/src/test/: conf.json  dune  parse_contract.sh  runtest.sh  test.ml  test_contract.tz
projects/ocaml_michelson-interpreter/src/test/test_files/: README.md  macro_expansion.tz  return_expected_tests.sh
sandbox/: Makefile  dune  main_client.ml  test.ml  test.tz
sandbox/doc/tezos_api@26bb1931b3ad/Tezos_api/: index.html
sandbox/doc/tezos_api@26bb1931b3ad/Tezos_api/Api/: index.html
sandbox/doc/tezos_api@26bb1931b3ad/Tezos_api/Api_context/: index.html
sandbox/doc/tezos_api@26bb1931b3ad/Tezos_api/Api_error/: index.html
sandbox/lib/: api.ml  api.mli  api_error.ml  api_error.mli  dune
static_checker/code/: dune-project
(+296 files in other folders)
