; See src/bin_node/dune to understand in detail how this file abuses
; the alternative dependency mechanism of dune to implement optional
; dependencies.

(executables
 (names test )
 (libraries SyncAPIV1
            core)
  (flags (:standard -open Tezos_base__TzPervasives
                    -linkall)))
