opam-version: "2.0.0"
maintainer: "joshua@kosmosvogel.de"
authors: ["Joshua Allgeier"]
license: "none"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
        "dune" {>= "2.9"}
        "ocaml"
        "base"
        "core"
        (*  "ppx_deriving"
        "fmt"
        "alcotest" {test} *)
        ]