opam-version: "2.0.5"
maintainer: "joshua@kosmosvogel.de"
authors: ["Joshua Allgeier"]
license: "none"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
        "dune" {>= "2.9"}
        "ocaml"
        "base"
        "core"
        "ptime"
        "zarith"
        "ppx_deriving"
        (*"tezos-crypto"*)
        "menhir"
        (* "fmt"
        "alcotest" {test} *)
        ]
