(library
 (name tezos_api)
 (libraries ;tezos-stdlib
            ;lwt
            ;tezos-error-monad
	    tezos-base
            tezos-base.unix
            tezos-rpc-http-client
	    tezos-rpc-http-client-unix
            tezos-shell-services
            tezos-client-base
            tezos-client-commands
            tezos-mockup-commands
	    str

	    (select void_for_linking-006-PsCARTHA from
              (tezos-client-006-PsCARTHA-commands.registration -> void_for_linking)
              (-> void_for_linking))

	    tezos-stdlib-unix
            tezos-client-base-unix
            tezos-signer-backends.unix)
 (flags (:standard ;-open Tezos_stdlib
                   ;-open Tezos_error_monad
		   -open Tezos_base__TzPervasives
                   -open Tezos_rpc_http_client
		   -open Tezos_rpc_http_client_unix
                   -open Tezos_stdlib_unix
                   -open Tezos_shell_services
                   -open Tezos_client_base
                   -open Tezos_client_commands
                   -open Tezos_mockup_commands
                   -open Tezos_client_base_unix
                   -linkall))
)
