(executable
  (name main)
  (modules main)
  (preprocess (pps ppx_let))
  (libraries parsing
             transformation
             tezos_backend))

(executable
	(name assert_to_json)
	(modules assert_to_json)
	(preprocess (pps ppx_let))
	(libraries parsing))

(library
 (name check_and_compile)
 (modules check_and_compile)
 (libraries parsing)
 (virtual_modules check_and_compile))