;(include_subdirs unqualified)

;(copy_files# ../lib/value.ml)

;(rule
;(deps (glob_files_rec /lib/))
;(action (run %{deps}))
;)

(library
 (name test)
 (libraries michelson core) ; alcotest
 (inline_tests (deps (glob_files ./test-files/contracts_alpha/opcodes/*.tz))) ; (deps glob_files_rec ./test-files/*.tz)
 (preprocess
  (pps ppx_jane))) ; ppx_inline_test
