;(include_subdirs unqualified)

;(copy_files# ../lib/value.ml)

;(rule
;  (target test.exe)
;  (deps (glob_files /test-files/contracts_alpha/opcodes/))
;  (action (run %{deps}))
;  )



(library
 (name test)
 (libraries michelson core) ; alcotest
 (inline_tests (deps (universe))) ; (deps glob_files_rec ./test-files/*.tz) (glob_files test-files/contracts_alpha/opcodes/)
 (preprocess
  (pps ppx_jane)) ; ppx_inline_test
) 
