(copy_files ../../../../../src/offline/tezos/typecheck/union_path.ml*)

(tests
 (names test_typecheck_types test_match_contract test_union_path)
 (libraries core
	    alcotest-lwt
	    lwt
	    lwt.unix
            parsing
	    transformation
	    tezos_backend
	    dao_type)
 (preprocess
  (pps ppx_jane))
 (lint
  (pps ppx_jane ppx_js_style -check-doc-comments -annotated-ignores -styler
    -pretty -dated-deprecation)))
