(library
 (name parsing)
 (libraries core fmt yojson biniou atdgen))

(ocamllex lexer)

(menhir
 (modules parser))

(rule
 (targets contract_module_j.ml
          contract_module_j.mli)
 (deps    contract_module.atd)
 (action  (run atdgen -j -rec -j-std %{deps})))

(rule
 (targets contract_module_t.ml
          contract_module_t.mli)
 (deps    contract_module.atd)
 (action  (run atdgen -t -rec %{deps})))


